petabtests/cases/v1.0.0/sbml/README.md
# [0001](0001/)

Simulation. Nothing special.

# [0002](0002/)

Simulation. Two conditions. Numeric parameter override.

# [0003](0003/)

Simulation. Numeric observable parameter overrides in measurement table.

# [0004](0004/)

Simulation. Observable parameters only defined in parameter table.

# [0005](0005/)

Simulation. Condition-specific parameters only defined in parameter table.

# [0006](0006/)

Simulation. Time-point specific numeric observable parameter overrides.

# [0007](0007/)

Simulation. Observable transformation log10.

# [0008](0008/)

Simulation. Replicate measurements.

# [0009](0009/)

Simulation. Preequilibration.

# [0010](0010/)

Simulation. Preequilibration. One species reinitialized, one not. InitialAssignment to species overridden.

# [0011](0011/)

Simulation. InitialAssignment to species overridden.

# [0012](0012/)

Simulation. Initial compartment size in condition table.

# [0013](0013/)

Simulation. Species with InitialAssignment overridden by parameter.

# [0014](0014/)

Simulation. Multiple numeric noise parameter overrides.

# [0015](0015/)

Simulation. Single parametric noise parameter override.

# [0016](0016/)

Simulation. Observable transformation log.

# [0017](0017/)

Simulation. Preequilibration. One species reinitialized, one not (NaN in condition table). InitialAssignment to species overridden.

# [0018](0018/)

Simulation. Preequilibration and RateRules. One state reinitialized, one not (NaN in condition table). InitialAssignment to species overridden.

# [0019](0019/)

Simulation. Estimated initial value via conditions table.

# [0020](0020/)

Simulation. NaN in condition table for model without preequilibration.

