petabtests/cases/v2.0.0/sbml/README.md
# [0001](0001/)

Simulation. Nothing special.

# [0002](0002/)

Simulation. Two conditions. Numeric parameter override.

# [0003](0003/)

Simulation. Numeric observable parameter overrides in measurement table.

# [0004](0004/)

Simulation. Observable parameters only defined in parameter table.

# [0005](0005/)

Simulation. Condition-specific parameters only defined in parameter table.

# [0006](0006/)

Simulation. Time-point specific numeric observable parameter overrides.

# [0007](0007/)

Simulation. Log-normal noise.

# [0008](0008/)

Simulation. Replicate measurements.

# [0009](0009/)

Simulation. Preequilibration.

# [0010](0010/)

Simulation. Preequilibration. One species reinitialized, one not. InitialAssignment to species overridden.

# [0011](0011/)

Simulation. InitialAssignment to species overridden.

# [0012](0012/)

Simulation. Initial compartment size in condition table.

# [0013](0013/)

Simulation. Species with InitialAssignment overridden by parameter.

# [0014](0014/)

Simulation. Multiple numeric noise parameter overrides.

# [0015](0015/)

Simulation. Single parametric noise parameter override.

# [0016](0016/)

Simultaneous state-dependent re-initialization of compartment size and contained species followed by event.

# [0017](0017/)

Simulation. Pre-equilibration. One species reinitialized, one not.InitialAssignment to species overridden.

# [0018](0018/)

Simulation. Preequilibration and RateRules. Non-zero simulation start time. InitialAssignment to species overridden.

# [0020](0020/)

Simulation. Estimated initial value via conditions table.

# [0021](0021/)

Observable-dependent noise formula.

# [0022](0022/)

Simultaneous re-initialization of compartment size and contained species.

# [0023](0023/)

Events during steady-state simulations.

# [0024](0024/)

Truncated prior distributions.

# [0025](0025/)

Non-truncated prior distributions.

# [0026](0026/)

Simulation. Estimated initial value via math expressions in conditions table.

# [0027](0027/)

Simulation. Condition-specific parameters defined via math expressions in the parameter table.

# [0028](0028/)

Simulation. None t0 condition applied at time-point without measurements.

# [0029](0029/)

Simulation. Non-zero simulation start time

# [0030](0030/)

Simultaneous trigger of PEtab condition and SBML event.

# [0031](0031/)

Simulation. Two PEtab conditions applied at the same time point.

# [0032](0032/)

Simulation. A parameter to estimate both sets initial value and appears in observable         formulas

